@@ -1,5 +1,7 @@
 2003-09-22  Pavel Roskin  <proski@gnu.org>
 
+	* syntax.c: Give names to numeric tokens.
+
 	* syntax.c (compare_word_to_right): Add checks that we don't go
 	beyond text length for certain invalid rules.
 	Reported by Juan C. Olivares <juancri@TAGnet.org>
